--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "pug": "*",
+    "jade": "*",
     "morgan": "~1.7.0",
     "mssql": "^3.3.0",
     "serve-favicon": "~2.3.0"
